--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Host Your Car</string>
+    <string name="mobile_number">Mobile Number</string>
+    <string name="submit">Submit</string>
 </resources>
