--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Host Your Car</string>
     <string name="mobile_number">Mobile Number</string>
     <string name="submit">Submit</string>
+    <string name="button">Button</string>
+    <string name="otp">OTP</string>
 </resources>
